--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Laykin's 441 Site</title>
   </head>
   <body>
-    <h1>My 441 Homework Site</h1>
-    <p>This site contains my work for MART 441.</p>
+    <h1>Laykin's 441 Homework Site</h1>
+    <p>This is the main homepage for Laykin Cantrell's example homework site for MART441. This website is where all live examples will be located throughout the semester..</p>
   </body>
 </html>
