Update index.html with personal information
Added personal introduction and educational background.

--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -1,1 +1,20 @@
+<head>
+  <title>Laykin Cantrell 441 Site</title>
+</head>
 
+<body>
+  <h1>Laykin Cantrell</h1>
+
+  <h2>University of Montana Student </h2>
+
+  <h3>About Me!</h3>
+  <p>Hello! My name is Laykin Cantrell! I am a junior majoring in Media Arts. I am expecting to graduate in the Spring of 2027. I transferred frommy local community college, 
+  Fort Peck Community College, on the Fort Peck Assiniboine & Sioux Reservation. I graduated as the valedictorian with an Associate of Applied Science in Communication Technology,
+  along with two certificates in Digital Technology and Geographic Information Systems. I graduated from high school in May 2022 and went straight to the
+  University of Montana, majoring in Physics/Astronomy. I had a rough time with the math professor there, which led me to change my degree to Media Arts. I have
+  always been fascinated with editing, coding, animation, web design, photography, and creating games, but was told growing up that I should pick a degree that would get
+  me a stable job, which is why I chose a STEM degree. After switching my degree, I had to withdraw from the University due to mental health. I took the rest of that 
+  spring semester off and then enrolled in my local community college. My main instructor was very supportive and helped me get my passion back for media arts and encouraged
+  me to get my bachelor's in Media Arts. I am really glad I listened to her because now I get to take all these amazing Media Arts courses offered by the University of Montana.</p>
+  
+</body> 
