Add interests section with childhood gaming memories
Added a section about interests and childhood gaming memories.

--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -16,5 +16,12 @@
   me a stable job, which is why I chose a STEM degree. After switching my degree, I had to withdraw from the University due to mental health. I took the rest of that 
   spring semester off and then enrolled in my local community college. My main instructor was very supportive and helped me get my passion back for media arts and encouraged
   me to get my bachelor's in Media Arts. I am really glad I listened to her because now I get to take all these amazing Media Arts courses offered by the University of Montana.</p>
-  
+
+  <h3>Interests/memory</h3>
+  <p>Growing up, my siblings and I were only connected through games due to our age gaps. We only played Mario games, like Mario Party, Mario Kart, Super Smash Bros., and Super Mario Bros. Wii/U.
+  I really do cherish those memories as I get older. My favorite memory of playing a game is when we played Mario Party 2. I was in last place with zero stars and only ten coins on the last turn. I landed on Chance Times
+  and was able to swap stars with my older brother, who was in first place with five stars. He was so mad that he had to step out of the living room. I ended up winning, and I rubbed it in his face for a long time; he still 
+  makes sure I don't win Mario Party ever again. Due to all of the great memories I have as a kid playing games, I would love to create a game where kids could play with their family or friends, be competitive, and create
+  memories with each other. </p>
+
 </body> 
