Applied Assignment 1 requirements

--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Laykin Cantrell 441 Site</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,6 +22,6 @@
   I really do cherish those memories as I get older. My favorite memory of playing a game is when we played Mario Party 2. I was in last place with zero stars and only ten coins on the last turn. I landed on Chance Times
   and was able to swap stars with my older brother, who was in first place with five stars. He was so mad that he had to step out of the living room. I ended up winning, and I rubbed it in his face for a long time; he still 
   makes sure I don't win Mario Party ever again. Due to all of the great memories I have as a kid playing games, I would love to create a game where kids could play with their family or friends, be competitive, and create
-  memories with each other. </p>
+  memories with each other.</p>
 
 </body> 
